Fixed issue wherein a long workshop title would overlap the same workshop's description on the workshop listing page.

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -162,7 +162,7 @@ ul.activity{
 .wrap-workshop{
     border: 5px solid #075D00;
     background-color: gainsboro;
-    height:290px;
+    height:310px;
     margin-top:5px;
     position:relative;
 }
